--- a/FPTBookWebClient/Views/OrderDetail/Index.cshtml
+++ b/FPTBookWebClient/Views/OrderDetail/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<BusinessObjects.OrderDetail>
 @{
-	ViewData["Title"] = "Orders Detail List";
+	ViewData["Title"] = "Purchase History Detail";
 }
 <div class="pt-2 mb-2">
-	<h1 class="text-center mb-4">Orders Detail List</h1>
+	<h1 class="text-center mb-4">Purchase History Detail</h1>
 	@{
 		int count = 0;
 	}
@@ -48,7 +48,6 @@
 					<td>@orderDetail.Quantity</td>
 					<td>$@amount.ToString("N2")</td>
 					<td><img src="@orderDetail.Book.BookImage" height="80" width="50" /></td>
-					<td><a class="btn btn-warning">Give</a></td>
 				</tr>
 			}
 		</tbody>
