fix bugs shop page

--- a/FPTBookWebClient/Areas/Owners/Views/Book/Update.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Book/Update.cshtml
@@ -63,8 +63,7 @@
 	<input type="hidden" asp-for="BookImage" value="BookImage" />
 	<div class="form-outline mb-4">
 		<label asp-for="ImageFile" class="form-label fw-bold"></label>
-		<input asp-for="ImageFile" class="form-control" required />
-		<span asp-validation-for="ImageFile" class="text-danger"></span>
+		<input asp-for="ImageFile" class="form-control" />
 	</div>
 	<div class="form-outline text-center">
 		@*<input type="submit" class="btn btn-info" value="Add new" />*@
