--- a/FPTBookWebClient/Areas/Admins/Views/Approve/Index.cshtml
+++ b/FPTBookWebClient/Areas/Admins/Views/Approve/Index.cshtml
@@ -58,11 +58,11 @@
 		})
 
 		swalWithBootstrapButtons.fire({
-			title: 'Are you sure?',
+			title: 'Are you sure to approve it?',
 			text: "You won't be able to revert this!",
 			icon: 'warning',
 			showCancelButton: true,
-			confirmButtonText: 'Yes, delete it!',
+			confirmButtonText: 'Yes, approve it!',
 			cancelButtonText: 'No, cancel!',
 			reverseButtons: true
 		}).then((result) => {
@@ -117,11 +117,11 @@
 		})
 
 		swalWithBootstrapButtons.fire({
-			title: 'Are you sure?',
+			title: 'Are you sure to reject it?',
 			text: "You won't be able to revert this!",
 			icon: 'warning',
 			showCancelButton: true,
-			confirmButtonText: 'Yes, delete it!',
+			confirmButtonText: 'Yes, reject it!',
 			cancelButtonText: 'No, cancel!',
 			reverseButtons: true
 		}).then((result) => {
