--- a/FPTBookWebClient/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/FPTBookWebClient/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,6 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
+<h1 class="text-center">Change Password</h1>
 <partial name="_StatusMessage" for="StatusMessage" />
 <section id="" class="main container-fluid">
     <section class="section profile">
