--- a/FPTBookWebClient/Views/Cart/CheckOut.cshtml
+++ b/FPTBookWebClient/Views/Cart/CheckOut.cshtml
@@ -33,7 +33,7 @@
 					</div>
 				</div>
 				<div class="mt-5">
-					<a><i class="fa fa-arrow-left"></i> Back to cart</a>
+					<a asp-controller="Cart" asp-action="Index"><i class="fa fa-arrow-left"></i> Back to cart</a>
 				</div>
 			</div>
 			@{
