--- a/FPTBookWebClient/Views/Shared/_Layout.cshtml
+++ b/FPTBookWebClient/Views/Shared/_Layout.cshtml
@@ -5,23 +5,47 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - FPTBook</title>
 	<link rel="icon" href="~/img/LOGO.jpg" />
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	@*<link rel="stylesheet" href="~/FPTBook.styles.css" asp-append-version="true" />*@
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
 
+	<!-- Font Awesome -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 	<!-- Vendor CSS Files -->
+	<link href="~/vendor/aos/aos.css" rel="stylesheet">
 	<link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="~/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 	<link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+	<link href="~/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+	<link href="~/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+	<!-- Boostrap Icon -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
 
 	<!-- Template Main CSS File -->
 	<link href="~/css/style.css" rel="stylesheet">
 	<link href="~/css/site.css" rel="stylesheet">
+	<link href="~/css/header.css" rel="stylesheet">
 	@RenderSection("stylesheets", required: false)
+	<style>
+		.btn-outline-violet {
+			--bs-btn-color: #5777ba;
+			--bs-btn-border-color: #5777ba;
+			--bs-btn-hover-color: #fff;
+			--bs-btn-hover-bg: #5777ba;
+			--bs-btn-hover-border-color: #5777ba;
+			--bs-btn-focus-shadow-rgb: 220, 53, 69;
+			--bs-btn-active-color: #fff;
+			--bs-btn-active-bg: #5777ba;
+			--bs-btn-active-border-color: #5777ba;
+			--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+			--bs-btn-disabled-color: #5777ba;
+			--bs-btn-disabled-bg: transparent;
+			--bs-btn-disabled-border-color: #5777ba;
+			--bs-gradient: none;
+		}
+	</style>
 </head>
 <body>
 	<script>
@@ -39,26 +63,69 @@
 		}
 	</script>
 	<div class="container-fluid">
-		<header>
-			<nav class="navbar-light bg-light d-flex flex-wrap justify-content-between py-4">
-				<div class="col-lg-3 col-md-12 col-12 ps-lg-4 d-flex justify-content-center justify-content-lg-start align-items-center">
-					<img title="FPT Book" onclick="location.href='/'" src="~/img/LOGO.jpg" height="40" width="40" class="me-2" style="border-radius: 5px" role="button" />
-					<form id="formSearch" asp-controller="Home" asp-action="Search" asp-route-pg="1" autocomplete="off" name="formSearch" class="d-flex input-group w-auto" method="GET" onsubmit="return formValid()">
-						<input class="form-control" type="search" name="searchValue" placeholder="Search product" aria-label="Search" required>
-						<button class="btn btn-outline-info ms-2" type="submit">Search</button>
-					</form>
+		<header class="ftco-section">
+			<div class="container-fluid px-lg-5 pb-3">
+				<div class="row">
+					<div class="col-md-8 order-md-first">
+						<div class="row">
+							<div class="col-md-6 order-2 order-md-1">
+								<form id="formSearch" asp-controller="Home" asp-action="Search" asp-route-pg="1" class="searchform my-3 my-md-0 order-lg-first" style="border-color: #5777ba">
+									<div class="form-group d-flex">
+										<input type="text" class="form-control pl-3" name="searchValue" placeholder="Search">
+										<button type="submit" placeholder="" class="form-control search">
+											<span class="fa fa-search"></span>
+										</button>
+									</div>
+								</form>
+							</div>
+							<div class="col-md-6 order-1 order-md-2">
+								<div class="text-center">
+									<a class="navbar-brand" asp-controller="Home" asp-action="Index">FPT BOOK<span>Architecture Agency</span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<partial name="_LoginPartial.cshtml"></partial>
 				</div>
-				<div class="col-lg-auto col-md-12 col-12 d-flex justify-content-center my-2 my-lg-0">
-					<ul class="nav fw-bold">
-						<li><a asp-controller="Home" asp-action="Index" class="nav-link text-dark text-uppercase">Home</a></li>
-						<li><a asp-controller="Home" asp-action="Shop" asp-route-pg="1" class="nav-link text-dark text-uppercase">Shop</a></li>
-						<li><a asp-controller="Home" asp-action="About" class="nav-link text-dark text-uppercase">About</a></li>
-						<li><a asp-controller="Home" asp-action="Contact" class="nav-link text-dark text-uppercase">Contact</a></li>
-					</ul>
+			</div>
+			<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+				<div class="container-fluid">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+							aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="fa fa-bars"></span> Menu
+					</button>
+					<div class="collapse navbar-collapse" id="ftco-nav">
+						<ul class="navbar-nav m-auto">
+							<li class="nav-item"><a asp-controller="Home" asp-action="Index" class="nav-link">Home</a></li>
+							<li class="nav-item"><a asp-controller="Home" asp-action="Shop" class="nav-link">Shop</a></li>
+							<li class="nav-item"><a asp-controller="Home" asp-action="About" class="nav-link">About</a></li>
+							<li class="nav-item"><a asp-controller="Home" asp-action="Contact" class="nav-link">Contact</a></li>
+						</ul>
+					</div>
 				</div>
-				<partial name="_LoginPartial.cshtml"></partial>
 			</nav>
+			<!-- END nav -->
 		</header>
+		@*<header>
+		<nav class="navbar-light bg-light d-flex flex-wrap justify-content-between py-4">
+		<div class="col-lg-3 col-md-12 col-12 ps-lg-4 d-flex justify-content-center justify-content-lg-start align-items-center">
+		<img title="FPT Book" onclick="location.href='/'" src="~/img/LOGO.jpg" height="40" width="40" class="me-2" style="border-radius: 5px" role="button" />
+		<form id="formSearch" asp-controller="Home" asp-action="Search" asp-route-pg="1" autocomplete="off" name="formSearch" class="d-flex input-group w-auto" method="GET" onsubmit="return formValid()">
+		<input class="form-control" type="search" name="searchValue" placeholder="Search product" aria-label="Search" required>
+		<button class="btn btn-outline-info ms-2" type="submit">Search</button>
+		</form>
+		</div>
+		<div class="col-lg-auto col-md-12 col-12 d-flex justify-content-center my-2 my-lg-0">
+		<ul class="nav fw-bold">
+		<li><a asp-controller="Home" asp-action="Index" class="nav-link text-dark text-uppercase">Home</a></li>
+		<li><a asp-controller="Home" asp-action="Shop" asp-route-pg="1" class="nav-link text-dark text-uppercase">Shop</a></li>
+		<li><a asp-controller="Home" asp-action="About" class="nav-link text-dark text-uppercase">About</a></li>
+		<li><a asp-controller="Home" asp-action="Contact" class="nav-link text-dark text-uppercase">Contact</a></li>
+		</ul>
+		</div>
+		<partial name="_LoginPartial.cshtml"></partial>
+		</nav>
+		</header>*@
 		<main role="main" class="pb-3">
 			@RenderBody()
 		</main>
@@ -131,20 +198,29 @@
 			</div>
 		</footer><!-- End Footer -->
 	</div>
-
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-			crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-			integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-			crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-			integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-			crossorigin="anonymous"></script>
-
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
+
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+	<script src="~/vendor/aos/aos.js"></script>
+	<script src="~/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+	<script src="~/vendor/glightbox/js/glightbox.min.js"></script>
+	<script src="~/vendor/swiper/swiper-bundle.min.js"></script>
+
+	<script src="~/js/main.js"></script>
+
+	<script>
+		const pathname = window.location.pathname
+		const element = document.querySelector("#ftco-nav > ul");
+
+		for (let i = 1; i < element.childNodes.length; i += 2) {
+			const href = element.childNodes[i].childNodes[0].getAttribute("href")
+			if (href === pathname) {
+				element.childNodes[i].className += " active"
+			}
+		}
+	</script>
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
