--- a/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
+++ b/FPTBookWebClient/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,197 @@
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
-<div class="col-lg-3 col-md-12 col-12 pe-lg-4">
+<div class="col-md-4 d-flex justify-content-center justify-content-lg-end align-items-center">
+	<div class="social-media">
+		@if (SignInManager.IsSignedIn(User))
+		{
+			AppUser user = UserManager.Users.FirstOrDefault(x => x.UserName == User.Identity.Name);
+			string firstName = user.FirstName;
+			string lastName = user.LastName;
+			string avatar = user.ProfilePicture;
+
+			<nav class="header-nav ms-auto">
+				<ul class="d-flex align-items-center">
+					<li class="nav-item dropdown">
+						<a class="nav-link nav-icon" asp-controller="Cart" asp-action="Index">
+							<i class="bi bi-cart4"></i>
+							@*<span class="badge bg-success badge-number"></span>*@
+						</a>
+					</li>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
+							<i class="bi bi-bell"></i>
+							<span class="badge bg-primary badge-number">4</span>
+						</a><!-- End Notification Icon -->
+
+						<ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow notifications">
+							<li class="dropdown-header">
+								You have 4 new notifications
+								<a href="#">
+									<span class="badge rounded-pill bg-primary p-2 ms-2">
+										View
+										all
+									</span>
+								</a>
+							</li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li class="notification-item">
+								<i class="bi bi-exclamation-circle text-warning"></i>
+								<div>
+									<h4>Lorem Ipsum</h4>
+									<p>Quae dolorem earum veritatis oditseno</p>
+									<p>30 min. ago</p>
+								</div>
+							</li>
+
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li class="notification-item">
+								<i class="bi bi-x-circle text-danger"></i>
+								<div>
+									<h4>Atque rerum nesciunt</h4>
+									<p>Quae dolorem earum veritatis oditseno</p>
+									<p>1 hr. ago</p>
+								</div>
+							</li>
+
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li class="notification-item">
+								<i class="bi bi-check-circle text-success"></i>
+								<div>
+									<h4>Sit rerum fuga</h4>
+									<p>Quae dolorem earum veritatis oditseno</p>
+									<p>2 hrs. ago</p>
+								</div>
+							</li>
+
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li class="notification-item">
+								<i class="bi bi-info-circle text-primary"></i>
+								<div>
+									<h4>Dicta reprehenderit</h4>
+									<p>Quae dolorem earum veritatis oditseno</p>
+									<p>4 hrs. ago</p>
+								</div>
+							</li>
+
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li class="dropdown-footer">
+								<a href="#" class="text-decoration-none">Show all notifications</a>
+							</li>
+
+						</ul><!-- End Notification Dropdown Items -->
+
+					</li><!-- End Notification Nav -->
+
+					<li class="nav-item dropdown pe-3">
+
+						<a class="nav-link nav-profile d-flex align-items-center pe-0" href="#"
+						   data-bs-toggle="dropdown">
+							@{
+								if (!string.IsNullOrEmpty(avatar))
+								{
+									<img src="/ProfilePicture/@avatar" alt="Profile" class="rounded-circle">
+								}
+								else
+								{
+									<img src="~/img/default-avt.jpg" alt="Profile" class="rounded-circle">
+								}
+							}
+							<span class="d-none d-md-block dropdown-toggle ps-2">@firstName</span>
+						</a><!-- End Profile Iamge Icon -->
+
+						<ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
+							<li class="dropdown-header">
+								<h6>@firstName @lastName</h6>
+								<span></span>
+							</li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li>
+								<a class="dropdown-item d-flex align-items-center" asp-area="Identity" asp-page="/Account/Manage/Index">
+									<i class="bi bi-person"></i>
+									<span>My Profile</span>
+								</a>
+							</li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li>
+								<a class="dropdown-item d-flex align-items-center" asp-area="Identity" asp-page="/Account/Manage/ChangePassword">
+									<i class="bi bi-gear"></i>
+									<span>Change Password</span>
+								</a>
+							</li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li>
+								<a class="dropdown-item d-flex align-items-center" asp-controller="Order" asp-action="Index">
+									<i class="bi bi-list-ul"></i>
+									<span>Order infomation</span>
+								</a>
+							</li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li>
+								<a class="dropdown-item d-flex align-items-center" asp-controller="PurchaseHistory" asp-action="Index">
+									<i class="bi bi-clock-history"></i>
+									<span>Purchase History</span>
+								</a>
+							</li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+
+							<li>
+								<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" onsubmit="return confirm('Are you sure to logout?')">
+									<button type="submit" class="dropdown-item"><i class="bi bi-box-arrow-right"></i>Sign Out</button>
+								</form>
+							</li>
+
+						</ul><!-- End Profile Dropdown Items -->
+					</li><!-- End Profile Nav -->
+
+				</ul>
+			</nav>
+
+			<!-- End Icons Navigation -->
+		}
+		else
+		{
+			<a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-violet mx-2" role="button">
+				Sign up
+			</a>
+			<a asp-area="Identity" asp-page="/Account/Login" class="btn btn-outline-secondary me-2" role="button">
+				Sign in
+			</a>
+		}
+
+	</div>
+</div>
+
+@*<div class="col-lg-3 col-md-12 col-12 pe-lg-4">
 	@if (SignInManager.IsSignedIn(User))
 	{
 		<div class="nav navbar navbar-expand-md d-flex justify-content-center ms-lg-5 ms-xl-5">
@@ -20,9 +210,6 @@
 					<li>
 						<a class="dropdown-item disabled">Hi @User.Identity?.Name!</a>
 					</li>
-					@*<li>
-				<a class="dropdown-item disabled">Hi @UserManager.GetUserId(User)</a>
-				</li>*@
 					<li>
 						<a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
 					</li>
@@ -48,7 +235,7 @@
 	else
 	{
 		<div class="d-flex justify-content-lg-end justify-content-center pe-lg-5 pe-0">
-			<a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-info mx-2" class="btn btn-outline-primary" role="button">
+			<a asp-area="Identity" asp-page="/Account/Register" class="btn btn-outline-violet mx-2" role="button">
 				Sign up
 			</a>
 			<a asp-area="Identity" asp-page="/Account/Login" class="btn btn-outline-secondary me-2" role="button">
@@ -56,4 +243,4 @@
 			</a>
 		</div>
 	}
-</div>
+</div>*@
