Create reset password

--- a/FPTBookWebClient/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FPTBookWebClient/Areas/Identity/Pages/Account/Login.cshtml
@@ -36,7 +36,7 @@
                                 <input type="checkbox" asp-for="Input.RememberMe" />
                                 <div class="control__indicator"></div>
                             </label>
-                            <span class="ms-auto"><a id="forgot-password" asp-page="./ForgotPassword" class="forgot-pass">Forgot Password</a></span>
+                            <span class="ms-auto"><a id="forgot-password" asp-page="./ForgotPassword" class="forgot-pass text-decoration-none">Forgot Password</a></span>
                         </div>
 
                         <input type="submit" value="Log in" id="login-submit" class="btn btn-block btn-primary">
