--- a/FPTBookWebClient/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/FPTBookWebClient/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,26 +1,28 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+	ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
-    </div>
-</div>
+<section class="text-center">
+	<h1>@ViewData["Title"]</h1>
+	<h2>Enter your email.</h2>
+	<hr />
+	<div class="mx-5">
+		<div class="mx-0 mx-md-5">
+			<form method="post" class="mx-0 mx-md-5">
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="form-floating mb-2">
+					<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+					<label asp-for="Input.Email" class="form-label"></label>
+					<span asp-validation-for="Input.Email" class="text-danger"></span>
+				</div>
+				<button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+			</form>
+		</div>
+	</div>
+</section>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+	<partial name="_ValidationScriptsPartial" />
 }
