--- a/FPTBookWebClient/Areas/Admins/Views/Approve/Index.cshtml
+++ b/FPTBookWebClient/Areas/Admins/Views/Approve/Index.cshtml
@@ -83,7 +83,7 @@
 						$(el)
 							.closest('tr')
 							.fadeOut(800, function () {
-								$('#genre' + id).remove()
+								$('#genre_' + id).remove()
 							})
 					},
 					error: function (xhr, status, error) {
@@ -142,7 +142,7 @@
 						$(el)
 							.closest('tr')
 							.fadeOut(800, function () {
-								$('#genre' + id).remove()
+								$('#genre_' + id).remove()
 							})
 					},
 					error: function (xhr, status, error) {
