--- a/FPTBookWebClient/Views/Cart/CheckOut.cshtml
+++ b/FPTBookWebClient/Views/Cart/CheckOut.cshtml
@@ -52,7 +52,7 @@
 
 						<div class="row item">
 							<div class="col-4 align-self-center text-center">
-								<img class="img-fluid" src="@cartItem.Book.BookImage" width="100">
+								<img class="img-fluid" src="@ViewBag.api/@cartItem.Book.BookImage" width="100">
 							</div>
 							<div class="col-8">
 								<div class="fw-bold">
