--- a/FPTBookWebClient/Areas/Owners/Views/Feedback/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Feedback/Index.cshtml
@@ -42,7 +42,7 @@
 					<td>@item.FeedDate</td>
 					<td>@item.User.UserName</td>
 					<td>@item.Book.BookTitle</td>
-					<td><img src="@item.Book.BookImage" height="80" width="50" /></td>
+					<td><img src="@ViewBag.api/@item.Book.BookImage" height="80" width="50" /></td>
 					<td>
 						@if (item.FeedStatus == BusinessObjects.Constraints.FeedStatus.Unchecked)
 						{
