--- a/FPTBookWebClient/Views/Home/Detail.cshtml
+++ b/FPTBookWebClient/Views/Home/Detail.cshtml
@@ -12,7 +12,7 @@
 			<div class="col-md-6">
 				<div id="slider" class="">
 					<div class="item text-center">
-						<img src="@Model.Book.BookImage" height="50%" width="50%" />
+						<img src="@ViewBag.api/@Model.Book.BookImage" height="50%" width="50%" />
 					</div>
 				</div>
 			</div>
