--- a/FPTBookWebClient/Views/Home/Shop.cshtml
+++ b/FPTBookWebClient/Views/Home/Shop.cshtml
@@ -66,7 +66,7 @@
 					<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-4">
 						<div class="card">
 							<div class="bg-image hover-zoom ripple" data-mdb-ripple-color="light">
-								<img src="@book.BookImage" class="w-100" style="width: auto; height: 35rem;" loading="lazy" />
+								<img src="@ViewBag.api/@book.BookImage" class="w-100" style="width: auto; height: 35rem;" loading="lazy" />
 								<a asp-controller="Home" asp-action="Detail" asp-route-id="@book.BookId">
 									<div class="mask">
 										<div class="d-flex justify-content-start align-items-end h-100">
