--- a/FPTBookWebClient/Views/OrderDetail/Index.cshtml
+++ b/FPTBookWebClient/Views/OrderDetail/Index.cshtml
@@ -44,7 +44,7 @@
 					<td>$@orderDetail.Book.BookPrice.ToString("N2")</td>
 					<td>@orderDetail.Quantity</td>
 					<td>$@amount.ToString("N2")</td>
-					<td><img src="@orderDetail.Book.BookImage" height="80" width="50" /></td>
+					<td><img src="@ViewBag.api/@orderDetail.Book.BookImage" height="80" width="50" /></td>
 				</tr>
 			}
 		</tbody>
