change directory of repository

--- a/FPTBookWebClient/Areas/Owners/Views/Statistic/Index.cshtml
+++ b/FPTBookWebClient/Areas/Owners/Views/Statistic/Index.cshtml
@@ -98,7 +98,7 @@
 					<td>@book.BookOriginalPrice</td>
 					<td>@book.SalePercent%</td>
 					<td>@book.BookStock</td>
-					<td><img src="@book.BookImage" height="80" width="50" /></td>
+					<td><img src="@ViewBag.api/@book.BookImage" height="80" width="50" /></td>
 				</tr>
 			}
 		</tbody>
